Fix whitespaces between inputs

--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -1,4 +1,4 @@
-.form-signin {
+.form-signin, .form-signup {
   max-width: 330px;
   padding: 15px;
   margin: 0 auto;
@@ -10,7 +10,8 @@
 .form-signin .checkbox {
   font-weight: normal;
 }
-.form-signin .form-control {
+.form-signin .form-control,
+.form-signup .form-control {
   position: relative;
   height: auto;
   -webkit-box-sizing: border-box;
@@ -18,10 +19,12 @@
   padding: 10px;
   font-size: 16px;
 }
-.form-signin .form-control:focus {
+.form-signin .form-control:focus,
+.form-signup .form-control:focus {
   z-index: 2;
 }
-.form-signin input[type="email"] {
+.form-signin input[type="email"],
+.form-signup input[type="email"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
@@ -31,4 +34,17 @@
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+/* Sign up */
+.form-signup input[name="password"] {
+    border-radius: 0;
+    margin-bottom: -1px;
+}
+.form-signup input[name="repeat-password"] {
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+
+
 
